if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  # No opencl
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  set(platform_sources plat/windows/openclapi.cpp)
  set(psapi_lib Psapi)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  set(platform_sources plat/posix/openclapi.cpp)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
  set(platform_sources plat/posix/openclapi.cpp)
else()
  error("Unknown platform: ${CMAKE_SYSTEM_NAME}")
endif()

add_library(
  node
  ${platform_sources}
  active_elections.hpp
  active_elections.cpp
  backlog_population.hpp
  backlog_population.cpp
  bandwidth_limiter.hpp
  bandwidth_limiter.cpp
  blockprocessor.hpp
  blockprocessor.cpp
  bootstrap/block_deserializer.hpp
  bootstrap/block_deserializer.cpp
  bootstrap/bootstrap_attempt.hpp
  bootstrap/bootstrap_attempt.cpp
  bootstrap/bootstrap_bulk_pull.hpp
  bootstrap/bootstrap_bulk_pull.cpp
  bootstrap/bootstrap_bulk_push.hpp
  bootstrap/bootstrap_bulk_push.cpp
  bootstrap/bootstrap_config.hpp
  bootstrap/bootstrap_config.cpp
  bootstrap/bootstrap_connections.hpp
  bootstrap/bootstrap_connections.cpp
  bootstrap/bootstrap_frontier.hpp
  bootstrap/bootstrap_frontier.cpp
  bootstrap/bootstrap_lazy.hpp
  bootstrap/bootstrap_lazy.cpp
  bootstrap/bootstrap_legacy.hpp
  bootstrap/bootstrap_legacy.cpp
  bootstrap/bootstrap.hpp
  bootstrap/bootstrap.cpp
  bootstrap/bootstrap_server.hpp
  bootstrap/bootstrap_server.cpp
  bootstrap_ascending/common.hpp
  bootstrap_ascending/throttle.hpp
  bootstrap_ascending/throttle.cpp
  bootstrap_ascending/account_sets.hpp
  bootstrap_ascending/account_sets.cpp
  bootstrap_ascending/iterators.hpp
  bootstrap_ascending/iterators.cpp
  bootstrap_ascending/peer_scoring.hpp
  bootstrap_ascending/peer_scoring.cpp
  bootstrap_ascending/service.hpp
  bootstrap_ascending/service.cpp
  cli.hpp
  cli.cpp
  common.hpp
  common.cpp
  confirming_set.hpp
  confirming_set.cpp
  confirmation_solicitor.hpp
  confirmation_solicitor.cpp
  daemonconfig.hpp
  daemonconfig.cpp
  distributed_work.hpp
  distributed_work.cpp
  distributed_work_factory.hpp
  distributed_work_factory.cpp
  election.hpp
  election.cpp
  election_behavior.hpp
  election_insertion_result.hpp
  election_status.hpp
  epoch_upgrader.hpp
  epoch_upgrader.cpp
  fair_queue.hpp
  ipc/action_handler.hpp
  ipc/action_handler.cpp
  ipc/flatbuffers_handler.hpp
  ipc/flatbuffers_handler.cpp
  ipc/flatbuffers_util.hpp
  ipc/flatbuffers_util.cpp
  ipc/ipc_access_config.hpp
  ipc/ipc_access_config.cpp
  ipc/ipc_broker.hpp
  ipc/ipc_broker.cpp
  ipc/ipc_config.hpp
  ipc/ipc_config.cpp
  ipc/ipc_server.hpp
  ipc/ipc_server.cpp
  json_handler.hpp
  json_handler.cpp
  local_block_broadcaster.cpp
  local_block_broadcaster.hpp
  local_vote_history.cpp
  local_vote_history.hpp
  make_store.hpp
  make_store.cpp
  network.hpp
  network.cpp
  nodeconfig.hpp
  nodeconfig.cpp
  node_observers.hpp
  node_observers.cpp
  node_rpc_config.hpp
  node_rpc_config.cpp
  node_wrapper.hpp
  node_wrapper.cpp
  inactive_node.hpp
  inactive_node.cpp
  node.hpp
  node.cpp
  online_reps.hpp
  online_reps.cpp
  openclconfig.hpp
  openclconfig.cpp
  openclwork.hpp
  openclwork.cpp
  peer_history.hpp
  peer_history.cpp
  peer_exclusion.hpp
  peer_exclusion.cpp
  portmapping.hpp
  portmapping.cpp
  process_live_dispatcher.cpp
  process_live_dispatcher.hpp
  recently_cemented_cache.cpp
  recently_cemented_cache.hpp
  recently_confirmed_cache.cpp
  recently_confirmed_cache.hpp
  repcrawler.hpp
  repcrawler.cpp
  rep_tiers.hpp
  rep_tiers.cpp
  request_aggregator.hpp
  request_aggregator.cpp
  scheduler/bucket.cpp
  scheduler/bucket.hpp
  scheduler/buckets.cpp
  scheduler/buckets.hpp
  scheduler/component.hpp
  scheduler/component.cpp
  scheduler/hinted.hpp
  scheduler/hinted.cpp
  scheduler/manual.hpp
  scheduler/manual.cpp
  scheduler/optimistic.hpp
  scheduler/optimistic.cpp
  scheduler/priority.hpp
  scheduler/priority.cpp
  telemetry.hpp
  telemetry.cpp
  transport/channel.hpp
  transport/channel.cpp
  transport/fake.hpp
  transport/fake.cpp
  transport/inproc.hpp
  transport/inproc.cpp
  transport/message_deserializer.hpp
  transport/message_deserializer.cpp
  transport/socket.hpp
  transport/socket.cpp
  transport/tcp.hpp
  transport/tcp.cpp
  transport/tcp_listener.hpp
  transport/tcp_listener.cpp
  transport/tcp_server.hpp
  transport/tcp_server.cpp
  transport/transport.hpp
  transport/transport.cpp
  unchecked_map.cpp
  unchecked_map.hpp
  vote_cache.hpp
  vote_cache.cpp
  vote_generator.hpp
  vote_generator.cpp
  vote_processor.hpp
  vote_processor.cpp
  vote_router.hpp
  vote_router.cpp
  vote_spacing.hpp
  vote_spacing.cpp
  vote_with_weight_info.hpp
  wallet.hpp
  wallet.cpp
  websocket.hpp
  websocket.cpp
  websocketconfig.hpp
  websocketconfig.cpp
  websocket_stream.hpp
  websocket_stream.cpp
  messages.hpp
  messages.cpp
  xorshift.hpp)

target_link_libraries(
  node
  nano_lib
  nano_store
  secure
  rpc
  libminiupnpc-static
  argon2
  lmdb
  Boost::beast
  Boost::program_options
  Boost::stacktrace
  Boost::system
  Boost::thread
  rocksdb
  ${CMAKE_DL_LIBS}
  ${psapi_lib})

target_compile_definitions(
  node PRIVATE -DTAG_VERSION_STRING=${TAG_VERSION_STRING}
               -DGIT_COMMIT_HASH=${GIT_COMMIT_HASH})

# This ensures that any changes to Flatbuffers source files will cause a
# regeneration of any C++ header files.
add_dependencies(node ipc_flatbuffers_lib)

include_directories(${CMAKE_SOURCE_DIR}/submodules)
include_directories(
  ${CMAKE_SOURCE_DIR}/submodules/nano-pow-server/deps/cpptoml/include)
